- If an SVDRP peer connection is lost, the connection in the opposite direction is now also
  closed (reported by Markus Ehrnsperger).
- Shutdown now takes into account the VPS margin (reported by Christoph Haubrich).
- Fixed an 'invalid lock sequence' when deleting the timeshift timer.
- Added DeviceFreeze() when pausing at the last mark (reported by Andreas Baierl).

2026-01-11:

- Fixed a memory leak in cMark::Parse() (thanks to Fabian Wolter).
- Revised the German language texts (thanks to Stefan Hofmann).
- The SVDRP command NEWT now returns code 550 if a timer with the same channel, day, start
  and stop time already exists (reported by Robert Hannebauer).
- cVector::Remove() can now remove more than one elements (also fixed an off-by-one error in
  the call to memmove()).
  APIVERSNUM is now 30010.
- Now using cTimeMs in cThread::Cancel() to make sure the given timeout is handled correctly.
- cTimeMs::Elapsed() now always returns the time since the last call to Set(); introduced
  cTimeMs::Remaining() and cTimeMs::Reset().
- Fixed ending a recording right before the next I-frame.
- The number of missing frames is now determined more accurately, even if there are longer gaps
  (reported by Stefan Hofmann).
  The following changes were made to implement this:
  + The definition of tIndexTs::missing has been changed from "after" to "before". After
    regenerating the index file, or cutting a recording from an earlier version, the
    position of the 'missing' flags in the index file may be shifted to the next I-frame.
  + cFrameDetector::SetMissing() is now deprecated and has been replaced with SetLastPts().
  + cRecorder::Action() no longer increases 'errors' for missing frames.
  + The total number of errors is now handled by cFrameDetector.
  + Detecting missing frames is now done in cPtsChecker, and can properly handle any size gaps
    in the sequence of frames.
  + In case the video data stream is broken during recording, the estimated number of missing