@@ -10176,7 +10176,7 @@ Video Disk Recorder Revision History
 - Fixed an 'invalid lock sequence' when deleting the timeshift timer.
 - Added DeviceFreeze() when pausing at the last mark (reported by Andreas Baierl).
 
-2026-01-11:
+2026-01-14:
 
 - Fixed a memory leak in cMark::Parse() (thanks to Fabian Wolter).
 - Revised the German language texts (thanks to Stefan Hofmann).
@@ -10232,5 +10232,6 @@ Video Disk Recorder Revision History
   + cRecording::Delete() now changes the extension of the cRecording's name member from *.rec to *.del.
   + cRecording::Undelete() now changes the extension of the cRecording's name member from *.del to *.rec.
   + cMenuRecordings::Delete() now moves the cRecording object from Recordings to DeletedRecordings.
+  + The info page of a deleted recording shows the remaining time of that recording.
   See "MANUAL/Restoring deleted recordings" for details.
 - Fixed the button text for "Command".
